full Changes (js + css + pocketbase):

--- a/css/style.css
+++ b/css/style.css
@@ -1941,3 +1941,16 @@ body.dark-mode .modal-content input {
   padding: 0.75rem;
   font-size: 0.9rem;
 }
+
+
+/* /------------------ */
+
+/* تنسيقات إضافية لواجهة المستخدم */
+/* .fa-user-check {
+  color: var(--dart-blue-light);
+}
+body.light-mode .fa-user-check {
+  color: var(--dart-blue);
+} */
+/* /------------------ */
+
