--- a/css/style.css
+++ b/css/style.css
@@ -2265,29 +2265,6 @@ label {
 
 
 
-
-/* ///////////////////////////////////////////////////////////////////////// */
-
-/* تنسيق الجداول في منتصف الصفحة */
-.markdown-content table {
-  margin-left: auto;
-  margin-right: auto;
-  width: auto !important;
-  max-width: 100%;
-  text-align: center;
-  direction:rtl ;
-  unicode-bidi: plaintext;
-}
-
-.markdown-content th,
-.markdown-content td {
-  text-align: center !important;
-}
-
-
-
-
-
 /* تنسيقات مشغل الفيديو */
 .video-player {
   width: 100%;
@@ -2473,3 +2450,42 @@ body.light-mode .video-volume-filled {
     width: 60px;
   }
 }
+
+
+
+
+/* ///////////////////////////////////////////////////////////////////////// */
+
+/* تنسيق الجداول في منتصف الصفحة */
+.markdown-content table {
+  margin-left: auto;
+  margin-right: auto;
+  width: auto !important;
+  max-width: 100%;
+  text-align: center;
+  direction:rtl ;
+  unicode-bidi: plaintext;
+}
+
+.markdown-content th,
+.markdown-content td {
+  text-align: center !important;
+}
+
+/* إصلاح مشكلة التجاوز
+.markdown-content table {
+  float: none !important;
+  display: table !important;
+} */
+
+/* التأكد من أن الجدول لا يأخذ العرض الكامل */
+/* .markdown-content table:not(.sql-table) {
+  width: auto !important;
+} */
+
+/* تنسيق خاص للجداول الناتجة عن SQL Runner */
+/* .sql-table {
+  margin: 1rem auto !important;
+  display: table !important;
+} */
+
