--- a/css/style.css
+++ b/css/style.css
@@ -2450,7 +2450,12 @@ body.light-mode .video-volume-filled {
     width: 60px;
   }
 }
-
+/* جزء ده مضاف حديثا عشان يعرض مقاطع الفيدو بتاعت الروابط خارجية زي الفيديو المحلي كحجم */
+.video-player iframe {
+  width: 100%;
+  height: 400px;
+  border: none;
+}
 
 
 
