--- a/css/style.css
+++ b/css/style.css
@@ -454,7 +454,7 @@ body.light-mode .markdown-content ol {
 .markdown-content th {
   background-color: #2E7D32;
   color: white;
-  /* padding: 0.75rem; */
+  padding: 0.10rem;
   text-align: center;
   font-weight: bold;
 }
@@ -464,7 +464,7 @@ body.light-mode .markdown-content th {
 }
 
 .markdown-content td {
-  /* padding: 0.75rem; */
+  padding: 0.10rem;
   border: 1px solid rgba(76, 175, 80, 0.3);
   text-align: center !important;
   vertical-align: middle;
